(English+ Arabic) content added

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -4,11 +4,90 @@
       "part1": "لتبدأ العمل عدل على <1>src/App.js</1> ثم احفظ الملف و اعد التحميل",
       "part2": "قم بإختيار اللغة العربية او الانجليزية بإستخدام الزر اعلاه. "
     },
+    "NavBar":{
+      "donateFood":"تبرع بالطعام",
+      "recieveFood":"احصل على الطعام",
+      "about":"من نحن",
+      "contact":"اتصل بنا"
+    },
+    "Footer":{
+      "credits":"فودنا© 2021 جميع الحقوق محفوظة."
+    },
     "CtaButton":{
       "title": "تبرع الأن"
     },
     "HeroComponent":{
       "headline": "هل تملك فائضاً من الطعام ؟",
       "paragraph": "فودنا هي حلقة الوصل بينك و بين عائلة مسكينة تعاني في مكان ما و لا تملك عشاء لهذا اليوم. ساعدهم و كن سبباً في تغيير حياتهم."
-    }
+    },
+    "SponsorsComponent":{
+      "headline": "من يمولنا ؟",
+      "paragraph": "لن تكون خدماتنا ممكنة لولا مساعدة داعمينا و ممولينا الكرماء الذين يبذلون اقصى ما لديهم لتنمية خدمة فودنا و تطويرها. "
+    },
+    "FeatureComponent":{
+      "Feature1":{
+        "title": "خاصية رائعة عنا",
+        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور"
+      },
+      "Feature2":{
+        "title": "خاصية رائعة عنا",
+        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور"
+      },
+      "Feature3":{
+        "title": "خاصية رائعة عنا",
+        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور"
+      },
+      "ButtonTitle":"Learn More"
+    },
+    "AvailableMealsComponent":{
+      "headline": "الوجبات المتوفرة لدينا",
+      "paragraph": "لو كنت منظمة خيرية تبحث عن تبرعات الطعام فهذا هو المكان المناسب لكز"
+    },
+    "TestimonialComponent":{
+      "quote":"ما نحتاج إليه حقاً ، المزيد من العطاء لمن هم في حاجة إلينا.",
+      "personName":"توماس كارليل"
+    },
+    "NarrowCtaComponent":{
+      "title":"هل تريد المساعدة ؟",
+      "title2":"تبرع الان او اتصل بنا",
+      "contactUs":"اتصل بنا"
+    },
+    "DonationPage":{
+      "title": "تبرع بالفائض من الطعام",
+      "content": "املأ الاستمارة ادناه بالمعلومات المطلوبة بأكمال عملية التبرع."
+    },
+    "ClaimMealComponent":{
+      "title":"احصل على هذه الوجبة",
+      "Name":"الاسم",
+      "Email":"البريد الالكتروني",
+      "Phone":"رقم الهاتف",
+      "Organization":"اسم المنظمة",
+      "getMealButton":"احصل على الوجبة"
+    },
+    "ContactUsComponent":{
+      "title": "اتصل بنا",
+      "content": "اذا كنت تملك اي استفسارات او اسئلة حول خدماتنا ، لطفاً املأ الاستمارة ادناه و سوف نتواصل معك في اقرب وقت ممكن",
+      "Name":"الاسم",
+      "Email":"البريد الالكتروني",
+      "message":"الرسالة",
+      "sendButton":"أرسال"
+    },
+    "PartnersComponent":"من يعمل معنا ؟",
+    "InfoComponent":{
+      "Info1":{
+        "title": "معلومات عنا",
+        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا",
+        "subTitle":"لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا"
+      },
+      "Info2":{
+        "title": "معلومات عنا",
+        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا",
+        "subTitle":"لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا"
+      },
+      "Info3":{
+        "title": "معلومات عنا",
+        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا",
+        "subTitle":"لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا"
+      }
+  }
   }
