--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -18,7 +18,7 @@
     },
     "HeroComponent":{
       "headline": "هل تملك فائضاً من الطعام ؟",
-      "paragraph": "فودنا هي حلقة الوصل بينك و بين عائلة مسكينة تعاني في مكان ما و لا تملك عشاء لهذا اليوم. ساعدهم و كن سبباً في تغيير حياتهم."
+      "paragraph": "فودنا هي حلقة الوصل بينك و بين عائلة تعاني في مكان ما و لا تملك عشاء لهذا اليوم. ساعدهم و كن سبباً في تغيير حياتهم."
     },
     "SponsorsComponent":{
       "headline": "من يمولنا ؟",
@@ -26,22 +26,22 @@
     },
     "FeatureComponent":{
       "Feature1":{
-        "title": "خاصية رائعة عنا",
-        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور"
+        "title": "نحن نحارب الجوع بتوفير الطعام لمن يحتاجه",
+        "content": "مع فودنا يتم ربط المتبرعين بالطعام مع من يحتاجه من خلال المنظمات غير الربحية حيث يتم استخدام الطعام الذي نوزعه في برامج الإغاثة الغذائية مثل المخازن المجتمعية."
       },
       "Feature2":{
-        "title": "خاصية رائعة عنا",
-        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور"
+        "title": "توفير الطعام لمن هم تحت خط الفقر",
+        "content": "مئة بالمئة من تبرعاتك تذهب لتوفير وجبات طعام لأنقاذ حياة الأسر الأكثر احتياجاً. يمكنك أن تغير حياة احدهم من خلال التبرع بوجبات بسيطة و لكنها سوف تحرز فارقاً كبيراً بالنسبة للآخرين."
       },
       "Feature3":{
-        "title": "خاصية رائعة عنا",
-        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور"
+        "title": "مكافحة الاسراف ومحاربة هدر الطعام",
+        "content": "نقبل التبرعات بجميع أنواع المواد الغذائية والبقالة من المطاعم والفنادق وحتى من الأفراد الذين يمتلكون فائضاً من الطعام."
       },
-      "ButtonTitle":"Learn More"
+      "ButtonTitle":"المزيد من العلومات"
     },
     "AvailableMealsComponent":{
       "headline": "الوجبات المتوفرة لدينا",
-      "paragraph": "لو كنت منظمة خيرية تبحث عن تبرعات الطعام فهذا هو المكان المناسب لكز"
+      "paragraph": "لو كنت منظمة خيرية تبحث عن تبرعات الطعام فهذا هو المكان المناسب لك"
     },
     "TestimonialComponent":{
       "quote":"ما نحتاج إليه حقاً ، المزيد من العطاء لمن هم في حاجة إلينا.",
@@ -75,19 +75,19 @@
     "PartnersComponent":"من يعمل معنا ؟",
     "InfoComponent":{
       "Info1":{
-        "title": "معلومات عنا",
-        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا",
-        "subTitle":"لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا"
+        "title": "ما هي خدمة فودنا ؟",
+        "content": "توفر فودنا حلاً بديلاً للتخلص من فائض الغذاء الصحي من خلال ربط المتبرعين بالفائض من الأغذية بالوكالات المحلية المختصة بالإغاثة من الجوع .",
+        "subTitle":"نقوم بذلك عن طريق إنشاء شبكة اتصالات وتقارير فعالة تربط مصادر الغذاء المتاحة بالمحتاجين من خلال تلك المنظمات الخيرية."
       },
       "Info2":{
-        "title": "معلومات عنا",
-        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا",
-        "subTitle":"لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا"
+        "title": "تأمين غذاء للمستحقين للتخفيف من معاناة الجوع",
+        "content": "قدرت دراسة المعهد السويدي للأغذية والتكنولوجيا لعام 2011 إجمالي الكمية المهدرة من الأغذية على مستوى العالم بحوالي ثلث الكمية من الأغذية الصالحة للأكل المنتجة للاستهلاك البشري ، والتي تبلغ حوالي 1.3 مليار طن سنويًا.",
+        "subTitle":"في المقابل ، واحد من كل سبعة أطفال لا يملكون ما يكفي من الغذاء ليعيشوا حياة صحية و مستقرة. هذا هو سبب وجود خدماتنا لتقليل هذه الأرقام."
       },
       "Info3":{
-        "title": "معلومات عنا",
-        "content": "لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا",
-        "subTitle":"لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا"
+        "title": "كيف يمكنك المساعدة ؟",
+        "content": "إذا كنت تدير مطعماً أو فندقاً أو كنت مجرد شخص عادي لديه الكثير من الطعام ولا تعرف ماذا تفعل به ، فهذا هو المكان المثالي لك.",
+        "subTitle":"يمكنك التبرع بطعامك الزائد وسنقوم بتسليمها للمحتاجين من خلال  تواصلنا مع المنظمات غير الربحية للحد من الجوع."
       }
   }
   }
