--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -25,15 +25,15 @@
     "paragraph": "لن تكون خدماتنا ممكنة لولا مساعدة داعمينا و ممولينا الكرماء الذين يبذلون اقصى ما لديهم لتنمية خدمة فودنا و تطويرها. "
   },
   "FeatureComponent": {
-    "Feature1": {
+    "Feature0": {
       "title": "نحن نحارب الجوع بتوفير الطعام لمن يحتاجه",
       "content": "مع فودنا يتم ربط المتبرعين بالطعام مع من يحتاجه من خلال المنظمات غير الربحية حيث يتم استخدام الطعام الذي نوزعه في برامج الإغاثة الغذائية مثل المخازن المجتمعية."
     },
-    "Feature2": {
+    "Feature1": {
       "title": "توفير الطعام لمن هم تحت خط الفقر",
       "content": "مئة بالمئة من تبرعاتك تذهب لتوفير وجبات طعام لأنقاذ حياة الأسر الأكثر احتياجاً. يمكنك أن تغير حياة احدهم من خلال التبرع بوجبات بسيطة و لكنها سوف تحرز فارقاً كبيراً بالنسبة للآخرين."
     },
-    "Feature3": {
+    "Feature2": {
       "title": "مكافحة الاسراف ومحاربة هدر الطعام",
       "content": "نقبل التبرعات بجميع أنواع المواد الغذائية والبقالة من المطاعم والفنادق وحتى من الأفراد الذين يمتلكون فائضاً من الطعام."
     },
@@ -70,22 +70,23 @@
     "content": "اذا كنت تملك اي استفسارات او اسئلة حول خدماتنا ، لطفاً املأ الاستمارة ادناه و سوف نتواصل معك في اقرب وقت ممكن",
     "Name": "الاسم",
     "Email": "البريد الالكتروني",
-    "message": "الرسالة",
-    "sendButton": "أرسال"
+    "Message": "الرسالة",
+    "sendButton": "أرسال",
+    "Subject": "الموضوع"
   },
   "PartnersComponent": "من يعمل معنا ؟",
   "InfoComponent": {
-    "Info1": {
+    "Info0": {
       "title": "ما هي خدمة فودنا ؟",
       "content": "توفر فودنا حلاً بديلاً للتخلص من فائض الغذاء الصحي من خلال ربط المتبرعين بالفائض من الأغذية بالوكالات المحلية المختصة بالإغاثة من الجوع .",
       "subTitle": "نقوم بذلك عن طريق إنشاء شبكة اتصالات وتقارير فعالة تربط مصادر الغذاء المتاحة بالمحتاجين من خلال تلك المنظمات الخيرية."
     },
-    "Info2": {
+    "Info1": {
       "title": "تأمين غذاء للمستحقين للتخفيف من معاناة الجوع",
       "content": "قدرت دراسة المعهد السويدي للأغذية والتكنولوجيا لعام 2011 إجمالي الكمية المهدرة من الأغذية على مستوى العالم بحوالي ثلث الكمية من الأغذية الصالحة للأكل المنتجة للاستهلاك البشري ، والتي تبلغ حوالي 1.3 مليار طن سنويًا.",
       "subTitle": "في المقابل ، واحد من كل سبعة أطفال لا يملكون ما يكفي من الغذاء ليعيشوا حياة صحية و مستقرة. هذا هو سبب وجود خدماتنا لتقليل هذه الأرقام."
     },
-    "Info3": {
+    "Info2": {
       "title": "كيف يمكنك المساعدة ؟",
       "content": "إذا كنت تدير مطعماً أو فندقاً أو كنت مجرد شخص عادي لديه الكثير من الطعام ولا تعرف ماذا تفعل به ، فهذا هو المكان المثالي لك.",
       "subTitle": "يمكنك التبرع بطعامك الزائد وسنقوم بتسليمها للمحتاجين من خلال  تواصلنا مع المنظمات غير الربحية للحد من الجوع."
