Refactor: add Donate Form translation and adjust style

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -47,8 +47,14 @@
     "button": "احصل على الوجبة"
   },
   "TestimonialComponent": {
-    "quote": "ما نحتاج إليه حقاً ، المزيد من العطاء لمن هم في حاجة إلينا.",
-    "personName": "توماس كارليل"
+    "t1": {
+      "quote": "ما نحتاج إليه حقاً ، المزيد من العطاء لمن هم في حاجة إلينا.",
+      "personName": "توماس كارليل"
+    },
+    "t2": {
+      "quote": "خدمة الاخرين هو الايجار الذي تدفعه لتأجير غرفتك في هذه الارض",
+      "personName": "محمد علي"
+    }
   },
   "NarrowCtaComponent": {
     "title": "هل تريد المساعدة ؟",
@@ -57,7 +63,38 @@
   },
   "DonationPage": {
     "title": "تبرع بالفائض من الطعام",
-    "content": "املأ الاستمارة ادناه بالمعلومات المطلوبة بأكمال عملية التبرع."
+    "content": "املأ الاستمارة ادناه بالمعلومات المطلوبة بأكمال عملية التبرع.",
+
+    "fullName": "الاسم الكامل",
+    "fullNamePlaceholder": "ادخل الاسم الكامل هنا",
+    "fullNameTxt": "لطفاُ ادخل اسمك الكامل في الحقل اعلاه",
+
+    "phoneNumber": "رقم الهاتف",
+    "phoneNumberPlaceholder": "ادخل رقم الهاتف هنا",
+    "phoneNumberTxt": "لن نشارك رقم هاتفك مع اي جهة اخرى.",
+
+    "email": "البريد الالكتروني",
+    "emailPlaceholder": "ادخل البريد الالكتروني",
+    "emailTxt": "لن نشارك بريدك الالكتروني مع اي جهة اخرى.",
+
+    "mealTitle": "اسم الوجبة",
+    "mealTitlePlaceholder": "ادخل عنوان الوجبة ",
+    "mealTitleTxt": "اختر عنواناً مناسباً يصف الطعام الذي ستتبرع به",
+
+    "description": "الوصف",
+
+    "quantity": "الكمية",
+    "quantityPlaceholder": "كمية الطعام",
+    "quantityTxt": "لطفاً ادخل وصفاً لكمية او عدد الوجبات المتبرع بها",
+
+    "organization": "الجهة المتبرعة",
+    "organizationPlaceholder": "ادخل اسم الجهة المتبرعة بالطعام",
+    "organizationTxt": "لطفاً ادخل اسم المؤسسة او المطعم الذي يمثل الجهة المتبرعة بالطعام",
+
+    "address": "العنوان",
+
+    "image": "صورة الطعام",
+    "submit": "أرسال"
   },
   "ClaimMealComponent": {
     "title": "احصل على هذه الوجبة",
