Fix: fix typo of hero component

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,7 +20,7 @@
   },
   "HeroComponent": {
     "headline": "You have Extra food ?",
-    "paragraph": "Foodna is a bridge between you and a hungry unfortunate family out there that does have a dinner to eat today. Help them and change their  life."
+    "paragraph": "Foodna is a bridge between you and a hungry unfortunate family out there that does not have a dinner to eat today. Help them and change their life."
   },
   "SponsorsComponent": {
     "headline": "Our Sponsors",
