--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -68,31 +68,27 @@
 
     "fullName": "الاسم الكامل",
     "fullNamePlaceholder": "ادخل الاسم الكامل هنا",
-    "fullNameTxt": "لطفاُ ادخل اسمك الكامل في الحقل اعلاه",
 
     "phoneNumber": "رقم الهاتف",
     "phoneNumberPlaceholder": "ادخل رقم الهاتف هنا",
-    "phoneNumberTxt": "لن نشارك رقم هاتفك مع اي جهة اخرى.",
 
     "email": "البريد الالكتروني",
     "emailPlaceholder": "ادخل البريد الالكتروني",
-    "emailTxt": "لن نشارك بريدك الالكتروني مع اي جهة اخرى.",
 
     "mealTitle": "اسم الوجبة",
     "mealTitlePlaceholder": "ادخل عنوان الوجبة ",
-    "mealTitleTxt": "اختر عنواناً مناسباً يصف الطعام الذي ستتبرع به",
 
     "description": "الوصف",
+    "descriptionPlaceholder": "ادخل وصف الوجبة",
 
     "quantity": "الكمية",
     "quantityPlaceholder": "كمية الطعام",
-    "quantityTxt": "لطفاً ادخل وصفاً لكمية او عدد الوجبات المتبرع بها",
 
     "organization": "الجهة المتبرعة",
     "organizationPlaceholder": "ادخل اسم الجهة المتبرعة بالطعام",
-    "organizationTxt": "لطفاً ادخل اسم المؤسسة او المطعم الذي يمثل الجهة المتبرعة بالطعام",
 
     "address": "العنوان",
+    "addressPlaceholder": "ادخل عنوان باكثر دقة ممكنة",
 
     "image": "صورة الطعام",
     "submit": "أرسال"
