Refactor: Testimonials Added

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -49,12 +49,14 @@
   },
   "TestimonialComponent": {
     "t1": {
-      "quote": "ما نحتاج إليه حقاً ، المزيد من العطاء لمن هم في حاجة إلينا.",
-      "personName": "توماس كارليل"
+      "quote": "المساهمة في بناء منصة لإعادة توزيع الطعام خطوة واعدة في سبيل تقليل إهدار الطعام وتوفير الغذاء لمن هم في حاجة إليه",
+      "personName": "عبد العزيز العباسي",
+      "profession": "فريق فودنا"
     },
     "t2": {
-      "quote": "خدمة الاخرين هو الايجار الذي تدفعه لتأجير غرفتك في هذه الارض",
-      "personName": "محمد علي"
+      "quote": "تسخير مهاراتنا التقنية لمساعدة الناس سيأتي دومآ بنتائج جيدة، و نحن متحمسون لجعل هذا الحل التقني بخدمة مجتمعنا",
+      "personName": "تبارك أياد",
+      "profession": "فريق فودنا"
     }
   },
   "NarrowCtaComponent": {
